--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,8 @@
         <pre id="devices_status"></pre>
         <h2>Current State</h2>
         <pre id="state"></pre>
+        <h2>Detected Codes</h2>
+        <pre id="detected_codes"></pre>
     </div>
     <script>
         async function fetchJsonData(url, elementId) {
@@ -31,6 +33,7 @@
             fetchJsonData('/status', 'status');
             fetchJsonData('/devices_status', 'devices_status');
             fetchJsonData('/state', 'state');
+            fetchJsonData('/detected_codes', 'detected_codes');
         }
 
         setInterval(updateData, 2000);
