--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,8 @@
         <pre id="state"></pre>
         <h2>Detected Codes</h2>
         <pre id="detected_codes"></pre>
+        <h2>Results</h2>
+        <ul id="file_list"></ul>
     </div>
     <script>
         async function fetchJsonData(url, elementId) {
@@ -29,11 +31,27 @@
             document.getElementById(elementId).innerText = JSON.stringify(data, null, 2);
         }
 
+        async function fetchFileList() {
+            const response = await fetch('/files');
+            const files = await response.json();
+            const fileListElement = document.getElementById('file_list');
+            fileListElement.innerHTML = '';
+            files.forEach(file => {
+                const listItem = document.createElement('li');
+                const link = document.createElement('a');
+                link.href = `/files/${file}`;
+                link.innerText = file;
+                listItem.appendChild(link);
+                fileListElement.appendChild(listItem);
+            });
+        }
+
         function updateData() {
             fetchJsonData('/status', 'status');
             fetchJsonData('/devices_status', 'devices_status');
             fetchJsonData('/state', 'state');
             fetchJsonData('/detected_codes', 'detected_codes');
+            fetchFileList();
         }
 
         setInterval(updateData, 500);
